--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-  --light-purp: #FFFFFF;
+  --light-purp: #E8E7E6;;
   --green: #7B949C;
   --special: #610012;
 }
@@ -289,7 +289,7 @@ a.close-nav:hover .toggle::before {
 
 #hobbies li {
   position: relative;
-  font-size: 25px;
+  font-size: 1.3em;
   list-style: none;
   margin-bottom: 80px;
 }
@@ -395,7 +395,11 @@ legend {
 #form-elements {
   display: grid;
   row-gap: 15px;
-  padding: 20px 10px;
+  padding: 30px 20px;
+  background-color: var(--green);
+  border-radius: .5em;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.541),
+  -5px -5px 10px rgba(0, 0, 0, 0.514);
 }
 
 #form-elements label {
@@ -407,12 +411,19 @@ legend {
 #form-elements textarea,
 #form-elements button {
   font-family: 'Roboto', sans-serif;
-  padding: 12px 7px;
   font-size: .95em;
-  background-color: var(--green);
+  line-height: 1.1em;
+  padding: .7em .5em;
+  background: transparent;
   border-radius: .5em;
-  border: none;
+  border: 2px solid black;
   margin: 0;
+}
+
+#form-elements input:focus,
+#form-elements select:focus,
+#form-elements textarea:focus {
+  outline: 3px solid var(--special);
 }
 
 #form-elements button {
@@ -455,25 +466,70 @@ li label::before {
   content: '';
   display: inline-block;
   position: absolute;
-  left: -50px;
-  width: 30px;
-  height: 30px;
+  left: -2.3em;
+  width: 1.5em;
+  height: 1.5em;
   border-radius: 50%;
-  background-color: var(--green);
+  background-color: var(--light-purp);
+  border: 1px solid black;
+}
+
+label::after {
+  content: '';
+  opacity: 0;
 }
 
 li input:checked + label::after {
-  content: '';
   display: inline-block;
   position: absolute;
-  left: -44px;
-  top: 25%;
-  width: 18px;
-  height: 18px;
+  left: -1.9em;
+  top: 30%;
+  width: .7em;
+  height: .7em;
   border-radius: 50%;
-  background-color: black;
+  background-color: var(--special);
+  opacity: 1;
+  transition: opacity 500ms ease;
+  /* box-shadow: 2px 2px 10px var(--special),
+  -2px -2px 10px var(--special); */
 }
 
+li input:checked + label::before {
+  border: 4px solid var(--special);
+}
+
+select {
+  appearance: none;
+  padding: 0 1em 0 0;
+  width: 100%;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+
+.select {
+  display: grid;
+  position: relative;
+  grid-template-areas: 'select';
+  align-items: center;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+
+select,
+.select::after {
+  grid-area: select;
+}
+
+.select::after {
+  content: "";
+  justify-self: end;
+  margin-right: .4em;
+  width: 0.8em;
+  height: 0.5em;
+  background-color: black;
+  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+}
 
 /* MUSIC SECTION 
 
