--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,14 @@
 }
 
 :root {
-  --light-purp: #E8E7E6;;
-  --green: #7B949C;
+  --main: #E8E7E6;
+  --lighter: #f0f0f0;
+  --blue: #7B949C;
   --special: #610012;
 }
 
 body {
-  background-color: #E8E7E6;
+  background-color: var(--main);
   background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M54.627 0l.83.828-1.415 1.415L51.8 0h2.827zM5.373 0l-.83.828L5.96 2.243 8.2 0H5.374zM48.97 0l3.657 3.657-1.414 1.414L46.143 0h2.828zM11.03 0L7.372 3.657 8.787 5.07 13.857 0H11.03zm32.284 0L49.8 6.485 48.384 7.9l-7.9-7.9h2.83zM16.686 0L10.2 6.485 11.616 7.9l7.9-7.9h-2.83zm20.97 0l9.315 9.314-1.414 1.414L34.828 0h2.83zM22.344 0L13.03 9.314l1.414 1.414L25.172 0h-2.83zM32 0l12.142 12.142-1.414 1.414L30 .828 17.272 13.556l-1.414-1.414L28 0h4zM.284 0l28 28-1.414 1.414L0 2.544V0h.284zM0 5.373l25.456 25.455-1.414 1.415L0 8.2V5.374zm0 5.656l22.627 22.627-1.414 1.414L0 13.86v-2.83zm0 5.656l19.8 19.8-1.415 1.413L0 19.514v-2.83zm0 5.657l16.97 16.97-1.414 1.415L0 25.172v-2.83zM0 28l14.142 14.142-1.414 1.414L0 30.828V28zm0 5.657L11.314 44.97 9.9 46.386l-9.9-9.9v-2.828zm0 5.657L8.485 47.8 7.07 49.212 0 42.143v-2.83zm0 5.657l5.657 5.657-1.414 1.415L0 47.8v-2.83zm0 5.657l2.828 2.83-1.414 1.413L0 53.456v-2.83zM54.627 60L30 35.373 5.373 60H8.2L30 38.2 51.8 60h2.827zm-5.656 0L30 41.03 11.03 60h2.828L30 43.858 46.142 60h2.83zm-5.656 0L30 46.686 16.686 60h2.83L30 49.515 40.485 60h2.83zm-5.657 0L30 52.343 22.343 60h2.83L30 55.172 34.828 60h2.83zM32 60l-2-2-2 2h4zM59.716 0l-28 28 1.414 1.414L60 2.544V0h-.284zM60 5.373L34.544 30.828l1.414 1.415L60 8.2V5.374zm0 5.656L37.373 33.656l1.414 1.414L60 13.86v-2.83zm0 5.656l-19.8 19.8 1.415 1.413L60 19.514v-2.83zm0 5.657l-16.97 16.97 1.414 1.415L60 25.172v-2.83zM60 28L45.858 42.142l1.414 1.414L60 30.828V28zm0 5.657L48.686 44.97l1.415 1.415 9.9-9.9v-2.828zm0 5.657L51.515 47.8l1.414 1.413 7.07-7.07v-2.83zm0 5.657l-5.657 5.657 1.414 1.415L60 47.8v-2.83zm0 5.657l-2.828 2.83 1.414 1.413L60 53.456v-2.83zM39.9 16.385l1.414-1.414L30 3.658 18.686 14.97l1.415 1.415 9.9-9.9 9.9 9.9zm-2.83 2.828l1.415-1.414L30 9.313 21.515 17.8l1.414 1.413 7.07-7.07 7.07 7.07zm-2.827 2.83l1.414-1.416L30 14.97l-5.657 5.657 1.414 1.415L30 17.8l4.243 4.242zm-2.83 2.827l1.415-1.414L30 20.626l-2.828 2.83 1.414 1.414L30 23.456l1.414 1.414zM56.87 59.414L58.284 58 30 29.716 1.716 58l1.414 1.414L30 32.544l26.87 26.87z' fill='%23010101' fill-opacity='0.06' fill-rule='evenodd'/%3E%3C/svg%3E");
   background-repeat: repeat;
   font-family: 'Roboto', sans-serif;
@@ -40,7 +41,7 @@ h3 {
 }
 
 p, figcaption, div, label, li {
-  font-size: .9em;
+  font-size: 1em;
 }
 
 section, article {
@@ -92,7 +93,7 @@ header {
   height: 100%;
   transform: translateY(-100vh);
   justify-content: center;
-  background-color:var(--green);
+  background-color:var(--blue);
   z-index: 11;
   transition: transform 300ms cubic-bezier(.06,.72,.57,1);;
 }
@@ -131,7 +132,7 @@ a.open-nav, a.close-nav {
   right: 15px;
   width: 60px;
   height: 50px;
-  background-color: var(--green);
+  background-color: var(--blue);
   border-radius: .3em;
   z-index: 11;
   transition: background-color 300ms ease-in;
@@ -238,7 +239,7 @@ a.close-nav:hover .toggle::before {
 }
 
 #bio .answer {
-  background-color: var(--light-purp);
+  background-color: var(--lighter);
   max-width: 600px;
   width: 95%;
   padding: 20px;
@@ -252,7 +253,7 @@ a.close-nav:hover .toggle::before {
   display: flex;
   flex-direction: column;
   width: 95%;
-  background-color: var(--light-purp);
+  background-color: var(--lighter);
   border-radius: .5em;
   margin: auto;
   padding: 10px 0;
@@ -312,7 +313,7 @@ audio {
   width: 0;
   height: 0;
   border-top: 10px solid transparent;
-  border-left: 20px solid var(--green);
+  border-left: 20px solid var(--blue);
   border-bottom: 10px solid transparent;
   margin-right: .5em;
 }
@@ -325,7 +326,7 @@ audio {
   text-align: center;
   border-radius: .5em;
   padding: 5px;
-  background-color: var(--light-purp);
+  background-color: var(--lighter);
 }
 
 figure {
@@ -345,7 +346,7 @@ figcaption {
 }
 
 hr {
-  border: 2px solid var(--green);
+  border: 2px solid var(--blue);
 }
 
 /* LIT SECTION */
@@ -354,7 +355,7 @@ hr {
   margin: auto;
   max-width: 800px;
   width: 95%;
-  background-color: var(--light-purp);
+  background-color: var(--lighter);
   padding: 2rem 2rem;
   border-radius: .5em;
   line-height: 1.5;
@@ -365,9 +366,9 @@ hr {
   font-size: 120px;
   padding: 20px;
   margin: 10px;
-  background-color: var(--green);
+  background-color: var(--blue);
   border-radius: 50% 40% 60% 50%;
-  border: 5px double var(--dark-purp);
+  border: 5px double var(--main);
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -380,13 +381,21 @@ hr {
   margin-left: auto;
 }
 
+form {
+  background-color: var(--blue);
+  border-radius: .5em;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.541),
+  -5px -5px 10px rgba(0, 0, 0, 0.514);
+  padding: 2px;
+}
+
 fieldset {
   border-radius: .5em;
   border: 5px double black;
 }
 
 legend {
-  background-color: var(--light-purp);
+  background-color: var(--lighter);
   color: black;
   border-radius: .5em;
   padding: 10px;
@@ -395,11 +404,6 @@ legend {
 #form-elements {
   display: grid;
   row-gap: 15px;
-  padding: 30px 20px;
-  background-color: var(--green);
-  border-radius: .5em;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.541),
-  -5px -5px 10px rgba(0, 0, 0, 0.514);
 }
 
 #form-elements label {
@@ -423,12 +427,14 @@ legend {
 #form-elements input:focus,
 #form-elements select:focus,
 #form-elements textarea:focus {
-  outline: 3px solid var(--special);
+  box-shadow: 0px 0px 5px var(--special);
+  border: 2px solid var(--special);
+  outline: none;
 }
 
 #form-elements button {
   margin: auto;
-  background-color: var(--green);
+  background-color: var(--blue);
   color: black;
   font-family: 'Open Sans', sans-serif;
   font-variant: small-caps;
@@ -470,8 +476,8 @@ li label::before {
   width: 1.5em;
   height: 1.5em;
   border-radius: 50%;
-  background-color: var(--light-purp);
-  border: 1px solid black;
+  background-color: var(--lighter);
+  border: 3px solid var(--special);
 }
 
 label::after {
@@ -490,8 +496,6 @@ li input:checked + label::after {
   background-color: var(--special);
   opacity: 1;
   transition: opacity 500ms ease;
-  /* box-shadow: 2px 2px 10px var(--special),
-  -2px -2px 10px var(--special); */
 }
 
 li input:checked + label::before {
@@ -579,7 +583,7 @@ select,
 }
 
 .a-section {
-  background-color: white;
+  background-colmain;
 }
 
 .b-section {
@@ -613,7 +617,7 @@ select,
 
 #video figcaption {
   text-align: center;
-  background-color: var(--light-purp);
+  background-color: var(--main);
   width: 95%;
 }
 
@@ -691,7 +695,7 @@ footer a {
   }
   
   #back-to-top img:hover, #back-to-top img:active {
-    background-color: var(--green);
+    background-color: var(--blue);
     animation-name: bounce;
     animation-duration: 800ms;
     animation-iteration-count: infinite;
@@ -735,7 +739,7 @@ footer a {
     right: 0;
     width: fit-content;
     padding: 0 2em;
-    background-color:var(--green);
+    background-color:var(--blue);
   }
 
   #nav-links {
